--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .hero-image-clip {
+       -webkit-clip-path: circle(98.1% at 100% 1%);
+        clip-path: circle(98.1% at 100% 1%);
+    }
+}
